added tyson (BMDB5) as test model

--- a/ba-scripts/test_models.yaml
+++ b/ba-scripts/test_models.yaml
@@ -38,3 +38,52 @@ models:
                             source: "TEST"
                             versionDate: "08.09.2016-18:02:20"
                             crawledDate: "08.09.2016-18:02:20"
+        - file_id: "urn:model:localhost:biomodels:releases:BIOMD0000000005.xml:!:BIOMD0000000005.xml"
+          name: "BIOMD0000000005"
+          model_type: "SBML"
+          versions:
+                  - version_id: "2005-04-11"
+                    path: "../supplementary/BMDB0000000005/2005-04-11/BIOMD0000000005.xml"
+                  - version_id: "2005-07-28"
+                    path: "../supplementary/BMDB0000000005/2005-07-28/BIOMD0000000005.xml"
+                  - version_id: "2006-01-31"
+                    path: "../supplementary/BMDB0000000005/2006-01-31/BIOMD0000000005.xml"
+                  - version_id: "2006-06-05"
+                    path: "../supplementary/BMDB0000000005/2006-06-05/BIOMD0000000005.xml"
+                  - version_id: "2006-10-03"
+                    path: "../supplementary/BMDB0000000005/2006-10-03/BIOMD0000000005.xml"
+                  - version_id: "2007-01-05"
+                    path: "../supplementary/BMDB0000000005/2007-01-05/BIOMD0000000005.xml"
+                  - version_id: "2007-06-05"
+                    path: "../supplementary/BMDB0000000005/2007-06-05/BIOMD0000000005.xml"
+                  - version_id: "2007-09-25"
+                    path: "../supplementary/BMDB0000000005/2007-09-25/BIOMD0000000005.xml"
+                  - version_id: "2008-03-28"
+                    path: "../supplementary/BMDB0000000005/2008-03-28/BIOMD0000000005.xml"
+                  - version_id: "2008-08-21"
+                    path: "../supplementary/BMDB0000000005/2008-08-21/BIOMD0000000005.xml"
+                  - version_id: "2008-12-03"
+                    path: "../supplementary/BMDB0000000005/2008-12-03/BIOMD0000000005.xml"
+                  - version_id: "2009-03-25"
+                    path: "../supplementary/BMDB0000000005/2009-03-25/BIOMD0000000005.xml"
+                  - version_id: "2009-09-02"
+                    path: "../supplementary/BMDB0000000005/2009-09-02/BIOMD0000000005.xml"
+                  - version_id: "2010-01-26"
+                    path: "../supplementary/BMDB0000000005/2010-01-26/BIOMD0000000005.xml"
+                  - version_id: "2010-04-27"
+                    path: "../supplementary/BMDB0000000005/2010-04-27/BIOMD0000000005.xml"
+                  - version_id: "2010-09-30"
+                    path: "../supplementary/BMDB0000000005/2010-09-30/BIOMD0000000005.xml"
+                  - version_id: "2011-04-15"
+                    path: "../supplementary/BMDB0000000005/2011-04-15/BIOMD0000000005.xml"
+                  - version_id: "2012-02-08"
+                    path: "../supplementary/BMDB0000000005/2012-02-08/BIOMD0000000005.xml"
+                  - version_id: "2012-05-20"
+                    path: "../supplementary/BMDB0000000005/2012-05-20/BIOMD0000000005.xml"
+                  - version_id: "2012-08-11"
+                    path: "../supplementary/BMDB0000000005/2012-08-11/BIOMD0000000005.xml"
+                  - version_id: "2012-12-12"
+                    path: "../supplementary/BMDB0000000005/2012-12-12/BIOMD0000000005.xml"
+                  - version_id: "2013-06-18"
+                    path: "../supplementary/BMDB0000000005/2013-06-18/BIOMD0000000005.xml"
+
