added automatic neo4j generation to the makefile

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,5 +1,6 @@
 
 MVN=mvn
+PATCH=patch
 
 all: core cli morre diff-core diff-cli diff-rest
 
@@ -10,6 +11,7 @@ clean:
 	cd masymos-diff && $(MVN) clean
 	cd masymos-diff-cli && $(MVN) clean
 	cd masymos-diff-rest && $(MVN) clean
+	rm -rf neo4j
 
 core:
 	cd masymos-core && $(MVN) install
@@ -29,5 +31,24 @@ diff-cli: diff-core core cli
 diff-rest: diff-core core
 	cd masymos-diff-rest && $(MVN) package
 
-neo4j: all
+neo4j: all 
+	# download neo4j 3.0.3 community, if necessary
+	test -e "neo4j-community-3.0.3-unix.tar.gz" || wget "https://neo4j.com/artifact.php?name=neo4j-community-3.0.3-unix.tar.gz" -O "neo4j-community-3.0.3-unix.tar.gz"
+
+	# unpack neo4j and rename target dir
+	tar -xzf "neo4j-community-3.0.3-unix.tar.gz"
+	mv -f "neo4j-community-3.0.3" "neo4j"
+
+	# copy libraries and plugins
+	test -d "neo4j/lib/masymos" && rm -rf "neo4j/lib/masymos" || echo ""
+	mkdir "neo4j/lib/masymos"
+	cp -fr "masymos-diff-rest/target/lib/" "neo4j/lib/masymos"
+	cp -f "masymos-diff-rest/target/masymos-diff-ws-0.0.1-SNAPSHOT.jar" "neo4j/plugins"
+	cp -f "masymos-morre/target/masymos-morre-0.9.1.jar" "neo4j/plugins"
+
+	# patch the config files
+	$(PATCH) neo4j/conf/neo4j.conf neo4j.conf.patch
+	$(PATCH) neo4j/conf/neo4j-wrapper.conf neo4j-wrapper.conf.patch
+	$(PATCH) neo4j/bin/neo4j-shared.sh neo4j-shared.sh.patch
+
 
